<resources>
    <string name="app_name">Pet Pal</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="page_title">PETPAL</string>
    <string name="edit">edit</string>
    <string name="content_description_search">search</string>
    <string name="favorite">favorite</string>
    <string name="content_description_favorite">favorite</string>
    <string name="content_description_more">more</string>
    <string name="more">more</string>
    <string name="fab_content_desc">Añadir mascota</string>
    <string name="petpal">Petpal</string>
    <string name="distance_text_view">0 m</string>

    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="infosignin">Información de inicio de sesión</string>
    <string name="siguiente">Siguiente</string>

    <string name="info_text">TextView</string>
    <string name="dar_paseo">Dar paseo</string>
    <string name="anadir_recordatorio">Añadir recordatorio</string>


    <string name="animal">Animal</string>
    <string name="introducir_raza">Introduzca raza</string>
    <string name="raza">Raza</string>
    <string name="introducir_peso">Introduzca Peso</string>
    <string name="peso">Peso</string>
    <string name="introducir_anyo">Introduzca año</string>
    <string name="anyo">Año</string>
    <string name="introducir_nombre">Introduzca Nombre</string>
    <string name="nombre">Nombre</string>
    <string name="foto">Foto</string>
    <string name="anadir">añadir</string>
    <!-- Strings -->

    <string name="raza_animal">Raza</string>
    <string name="peso_animal">Peso</string>
    <string name="fecha_nacimiento_animal">Fecha nacimiento</string>
    <string name="complete_campos">Por favor, completa todos los campos</string>


    <!--traducir-->
    <string name="option_take_photo">Tomar foto</string>
    <string name="option_choose_gallery">Elegir de la galería</string>
    <string name="option_cancel">Cancelar</string>

    <string name="dialog_title">Elige una opción</string>
    <string name="dialog_title_delete">Eliminar</string>
    <string name="dialog_message_delete">¿Deseas eliminar este animal?</string>
    <string name="dialog_button_yes">Sí</string>
    <string name="dialog_button_no">No</string>
    <string name="toast_delete_success">Has eliminado a %1$s correctamente.</string>
    <string name="login">¿Ya tienes cuenta? Accede: </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="register">Register</string>
    <string name="pulsa_para_login">Pulsa para Login</string>
    <string name="pulsa_para_registrarte">¿Todavía no tienes cuenta? Registrate aquí</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logout_desc">Cerrar sesión</string>
    <string name="chat">Chat</string>
    <string name="username">Username</string>
    <string-array name="nombres">

        <item>Perro</item>
        <item>Gato</item>
        <item>Pez</item>
        <item>Conejo</item>
        <item>Hamster</item>
        <item>Pájaro</item>
        <item>Tortuga</item>
        <item>Cobaya</item>
        <item>Serpiente</item>
        <item>Hurón</item>
        <item>Gecko</item>
        <item>Otro</item>

    </string-array>
    <!--traducir-->

    <string name="dialog_title_select_weight">Seleccionar peso</string>
    <string name="dialog_button_accept">Aceptar</string>
    <string name="dialog_button_cancel">Cancelar</string>
    <string name="enter_email">Introduce el correo electrónico</string>
    <string name="enter_password">Introduce la contraseña</string>
    <string name="login_successful">Inicio de sesión exitoso.</string>
    <string name="login_failed">Error de autenticación.</string>
    <string name="google_sign_in_failed">Error al iniciar sesión con Google</string>

        <string name="select_weight">Seleccionar peso</string>
        <string name="accept">Aceptar</string>
        <string name="cancel">Cancelar</string>


    <string name="confirmacion">¿Con más mascotas?</string>
        <string name="si">Sí</string>
        <string name="no">No</string>
        <string name="recordatorio">Recordatorio</string>
        <string name="fecha_nacimiento">Fecha de nacimiento</string>




    <string name="introducir_otro_tipo_animal">Introduce otro tipo de animal</string>

    <string name="enter_username">Enter username</string>
        <string name="account_created">Account created.</string>
        <string name="auth_failed">Authentication failed.</string>
        <string name="error_save_username">Error saving username</string>

    <string-array name="languages">
        <item>Español</item>
        <item>Italiano</item>
        <item>Українська</item>
    </string-array>
  <!--  traducir-->
    <string name="welcome_message">Bienvenido %s a PetPal</string>
    <string name="logo">Logo</string>
    <string name="login2">Login</string>
    <string name="add_pet">Añadir</string>
    <string name="add_name">Nombre</string>
    <string name="add_raza">Raza</string>
    <string name="add_peso">Peso</string>
    <string name="add_animal_type">¿Qué tipo de animal es?</string>
    <string name="add_photo">¿Quieres añadir una foto?</string>
    <string name="add_date_birth">Fecha de nacimiento</string>
    <string name="add_custom_animal">Animal personalizado</string>
    <string name="add_data">Introduce los datos del animal</string>
    <string name="editar_datos">Editar</string>
    <string name="foto_perfil">Foto Perfil:</string>
    <string name="nombre_de_usuario">Nombre de Usuario:</string>
    <string name="cambiar_idioma">Cambiar idioma:</string>
    <string name="email_main">Email</string>
    <string name="asunto">Asunto</string>
    <string name="cita">¿Cita en el veterinario?¿Recordartorio? Apúntalo:</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="conoce_gente_cerca">Conoce gente cerca</string>


</resources>