<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TOOLBAR -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="6dp"
            android:paddingEnd="16dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close_black_24dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_animal_type" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/nombres" />
                </com.google.android.material.textfield.TextInputLayout>

<!--                <EditText-->
<!--                    android:id="@+id/otroAnimalEditText"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/introducir_otro_tipo_animal"-->
<!--                    android:visibility="gone" />-->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otroAnimalEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="50dp"
                        android:hint="@string/add_custom_animal"
                        android:visibility="gone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_data"
                    android:layout_marginTop="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="50dp"
                        android:hint="@string/add_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eraza"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="50dp"
                        android:hint="@string/add_raza" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/epeso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="50dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/add_peso"
                        android:inputType="none">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

<!--                <EditText-->
<!--                    android:id="@+id/epeso"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:ems="10"-->
<!--                    android:focusable="false"-->
<!--                    android:focusableInTouchMode="false"-->
<!--                    android:hint="@string/introducir_peso"-->
<!--                    android:inputType="none" />-->

<!--                <EditText-->
<!--                    android:id="@+id/eanyo"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:ems="10"-->
<!--                    android:focusable="false"-->
<!--                    android:focusableInTouchMode="false"-->
<!--                    android:hint="@string/introducir_anyo"-->
<!--                    android:inputType="none" />-->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eanyo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="50dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/add_date_birth"
                        android:inputType="none">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/foto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_photo"
                    android:layout_marginTop="16dp"/>

                <ImageView
                    android:id="@+id/anyadirimagen"
                    android:layout_width="196dp"
                    android:layout_height="172dp"
                    android:layout_gravity="center"
                    android:background="#FFFFFF"
                    android:scaleType="centerCrop"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>